# haxball-nn

./: .gitignore  CMakeLists.txt  README.md
src/: Ball.cpp  Ball.h  ContactListener.cpp  ContactListener.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  GoalLine.cpp  GoalLine.h  GoalPost.cpp  GoalPost.h  Pitch.cpp  Pitch.h  Player.cpp  Player.h  constants.h  main.cpp
